# elt_lake

./: .gitignore  CLAUDE.md  CLAUDE_ADD_SKILL.md  Finance_Data_Cleansing_Documentation.docx  QWEN.md  RAG_SETUP.md  TRAE.md  TRAE_PYTHON_MODULE_STRUCTURE.md  TRAE_SQL.md  convert_pg_dump_to_duckdb.py  pyproject.toml  rag_config.yaml  test_regex.py  verify_overview.py
elt_doc_assessment/: README.md  pyproject.toml
elt_doc_assessment/config/: website_optimisation.yaml
elt_doc_assessment/src/elt_doc_assessment/: __init__.py  assessment.py  cli.py  config_loader.py
elt_doc_damabok/: ARCHITECTURE.md  README.md  pyproject.toml
elt_doc_damabok/config/: doc_damabok.json  ollama.json  vector_db.json
elt_doc_damabok/src/elt_doc_damabok/: __init__.py  constants.py  ingest.py  initialise.py  query.py  text_processor.py  utils.py
elt_doc_damabok/tests/: test_ingest.py  test_utils.py
elt_doc_leanix_overview/: README.md  pyproject.toml
elt_doc_leanix_overview/templates/: integration_overview.xml
elt_doc_rag/: README.md  pyproject.toml
elt_doc_rag/config/: documents.yaml
elt_doc_rag/src/elt_doc_rag/: __init__.py  config.py  ingest.py  query.py  status.py
elt_doc_rag/tests/: __init__.py  test_config.py
elt_doc_sad/: .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml
elt_doc_sad/config/: integration_patterns.json  sad_template.json  section_guidance.json
elt_doc_sad/src/elt_doc_sad/: __init__.py  config_loader.py  content_validator.py  llm_generator.py  py.typed  sad_generator.py
elt_doc_sad/tests/: conftest.py  test_config_loader.py  test_content_validator.py  test_fictional_scenario.py  test_llm_generator.py  test_sad_generator.py
elt_doc_sad_leanix/: README.md  analyze_compliance_docs.py  inspect_excel.py  pyproject.toml
elt_doc_sad_leanix/config/: LeanIX_Inventory.xlsx
elt_doc_sad_leanix/examples/: COR_V00.01_INT001_Workday_Okta.xml  COR_V00.01_INT002_Workday_Crisis24.xml  COR_V00.01_INT004_AMEX_GBT.xml  COR_V00.01_INT018_Barclays_Banking.xml  COR_V00.01_INT019_Natwest.xml  COR_V00_01_INT006_Barclaycard.xml  XML_GENERATION_SOLUTION.md
elt_doc_sad_leanix/src/elt_doc_sad_leanix/: __init__.py  diagram_generator.py  generate_from_sad.py  generate_int006.py  generate_int011.py  generate_integration_xml.py  update_overview.py
elt_doc_sad_leanix/templates/: integration_bidirectional_api.xml  integration_inbound_fa_sftp.xml  integration_multi_connector.xml  integration_outbound_fa_sftp.xml
elt_doc_transcript_audio/: README.md  pyproject.toml
elt_doc_transcript_audio/scripts/: transcribe_audio.py
elt_doc_transcript_audio/src/elt_doc_transcript_audio/: __init__.py  transcriber.py
elt_doc_transcript_audio/test/: test_transcriber.py
elt_doc_vendor_assess/: README.md  pyproject.toml
elt_doc_vendor_assess/src/elt_doc_vendor_assess/: generate_compliance_matrix.py  generate_preferred_tech_change.py  generate_supplier_selection.py
elt_doc_vendor_assess/templates/: CRM_Migration_Tool_Compliance_Assessment.docx  Compliance Matrix Template.docx  Currency_FX_Rate_Provider_Compliance_Assessment.docx  Preferred Technologies Change Template.docx  Preferred_Technologies_Change_Hyve_SFTP.docx  SaaS_SFTP_Compliance_Matrix.docx  Supplier Selection Template.docx  Supplier_Selection_Questionnaire_Hyve_completed.docx
elt_doc_website_optimisation/: .gitignore  .pre-commit-config.yaml  README.md  enhancement_prompt.txt  pyproject.toml
elt_doc_website_optimisation/assessments/: cnltd_assessment.yaml  template_assessment.yaml
elt_doc_website_optimisation/config/: __init__.py  website_optimisation.yaml
elt_doc_website_optimisation/prompts/: final_client_deliverable.txt  report_enhancement.txt
elt_doc_website_optimisation/src/elt_doc_website_optimisation/: __init__.py  assessment.py  cli.py  config_loader.py  create_blended_report.py  enhance_report.py  generate_final_deliverable.py  generate_final_report.py  screenshot.py
elt_doc_website_optimisation/tests/: __init__.py
elt_ingest_excel/: ARCHITECTURE.md  README.md  VBA_MACRO_ANALYZER_GUIDE.md  VBA_VALIDATION_RUNNER.md  elt_skill_excel_utility.py  pyproject.toml
elt_ingest_excel/config/data/: generate_mappings.py  issue_phone_number.json  ref_bank_sort_code_prefix_mapping.json  ref_country.json  ref_country_county_state_town_mapping.json  ref_country_tax_id_type_mapping.json  ref_customer_category.json  ref_customer_class.json  ref_location_mapping.json  ref_post_code_county.csv  ref_post_code_county.json  ref_post_code_district.csv  ref_post_code_district.json  ref_post_code_workday_region.json  ref_source_business_unit_mapping.json  ref_source_country_code_mapping.json  ref_source_country_name_mapping.json  ref_source_payment_terms.json  ref_source_supplier_payment_terms.json  ref_supplier_category.json  ref_supplier_category_mapping.json  ref_workday_country_state_region.csv  ref_workday_country_state_region.json  ref_workday_county_obsolete.json  ref_workday_group_additional.json  ref_worker_type_mapping.json  workday_customer_mapping.csv
elt_ingest_excel/config/transform/: README.md
elt_ingest_excel/examples/: analyze_vba_macros.py  base_runner.py  base_validator.py  document_validation_macros.py  fin_customer_debtor.py  fin_supplier_creditor.py  fin_supplier_creditor_create_eib.py  fin_supplier_creditor_validate.py  fin_workday_ref.py  finance_supplier.json  hcm_contingent_worker.py  run_from_json.py  sample_config.json  test_read_excel.py  unhide_validation_manifest.py
elt_ingest_excel/scripts/: convert_pg_dump_to_duckdb.py
elt_ingest_excel/src/elt_ingest_excel/: __init__.py  elt_pipeline.py  elt_skill_excel_utility.py  excelReader.py  excel_reader.py  file_ingestor.py  ingester.py
elt_ingest_excel/test/: __init__.py  test_duckdb_writer.py  test_ingester.py  test_json_config.py  test_vba_analyzer.py
elt_ingest_excel/test/fixtures/: custom_header_row.json  ingest_custom_header.json  ingest_single_sheet.json  (+8 more)
elt_llm_rag/: README.md  pyproject.toml
elt_sftp/: README.md  pyproject.toml
elt_sftp/examples/: fa_hyve_pull.py  fa_hyve_push.py
elt_sftp/test/: test_connectivity.py
(+353 files in other folders)
