[project]
name = "elt-doc-assessment"
version = "0.1.0"
description = "Assessment tool for ETL/ELT document URLs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.2",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]
