[project]
name = "elt-doc-damabok"
version = "0.1.0"
description = "ELT module for working with the DAMA-DMBOK2R data management body of knowledge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0.0",
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
