[project]
name = "elt-doc-leanix-overview"
version = "0.1.0"
description = "Consolidate multiple LeanIX integration diagrams into a single overview diagram"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
