[project]
name = "elt-doc-sad-leanix"
version = "0.1.0"
description = "Generate LeanIX diagrams.net XML files from Workday SAD documents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
