[project]
name = "elt-doc-vendor-assess"
version = "0.1.0"
description = "Generate vendor assessment documents (.docx) for FA supplier evaluation and ACB approval"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-docx>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
