[project]
name = "elt-ingest-excel"
version = "0.1.0"
description = "ELT module for ingesting Excel workbooks into DuckDB"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.0",
    "duckdb>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
