[project]
name = "elt-ingest-excel"
version = "0.1.0"
description = "ELT module for ingesting Excel workbooks into DuckDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.0",
    "openpyxl>=3.1.5",
    "duckdb>=1.4.4",
    "xlwings>=0.33.20",
    "phonenumbers>=8.13.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["test"]
