[project]
name = "elt-llm-rag"
version = "0.1.0"
description = "LlamaIndex-based RAG core for document chunking, embedding, and retrieval"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "llama-index>=0.12.0",
    "llama-index-readers-file>=0.4.0",
    "llama-index-embeddings-ollama>=0.3.0",
    "llama-index-llms-ollama>=0.4.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "chromadb>=0.6.0",
    "ollama>=0.3.0",
]

[project.scripts]
elt-llm-rag-ingest = "elt_llm_rag.ingest:main"
elt-llm-rag-query = "elt_llm_rag.query:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]
