[project]
name = "elt-sftp"
version = "0.1.0"
description = "ELT module for SFTP file transfer operations (push and pull)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=3.5.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
